plugins {
	id 'java-library'
	id 'net.fabricmc.fabric-loom' version '1.15.2' apply(false)
	id 'net.neoforged.moddev' version '2.0.140' apply(false)
	id "me.modmuss50.mod-publish-plugin" version "1.1.0"
}

tasks.named('wrapper', Wrapper).configure {
	distributionType = Wrapper.DistributionType.BIN
}

base {
	archivesName = archives_base_name
}

apply from: 'https://raw.githubusercontent.com/FTBTeam/mods-meta/v1/gradle/maven.gradle'
apply from: 'https://raw.githubusercontent.com/FTBTeam/mods-meta/v1/gradle/publishing-2.gradle'
apply from: 'https://raw.githubusercontent.com/FTBTeam/mods-meta/v1/gradle/utils.gradle'
apply from: 'https://raw.githubusercontent.com/FTBTeam/mods-meta/v1/gradle/changelog.gradle'

allprojects {
	apply plugin: 'idea'
	apply plugin: 'java-library'
	apply plugin: 'maven-publish'

	version = createModVersion(project)
	group = project.maven_group

	tasks.withType(JavaCompile).configureEach {
		options.encoding = 'UTF-8'
		options.release = 25
	}

	dependencies {
//        testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0-M1'
	}

	java {
		withSourcesJar()
	}
}

subprojects {
	base {
		archivesName = rootProject.base.archivesName.get() + (project.name != "common" ? "-" + project.name : "")
	}

	if (project.name != "common") {
		dependencies {
			api project(":common")
		}

		jar {
			from project(":common").sourceSets.main.output
		}
	}

	repositories {
		mavenCentral()
		mavenLocal()
		commonMavenRepos(repositories)
	}

	processResources {
		exclude '.cache'

		inputs.property "version", project.version

		filesMatching(["META-INF/neoforge.mods.toml", "fabric.mod.json"]) {
			expand "version": project.version,
					"neoforgeversionrange": project.neoforge_version_range,
					"neoforgeloaderversion": project.neoforge_loader_version,
					"minecraft_version_range_maven": minecraft_version_range_maven,
					"minecraft_version_range_semver": minecraft_version_range_semver,
					"fabricapiversionrange": project.fabric_api_version_range,
					"ftblibraryversion": project.ftb_library_version,
					"ftbteamsversion": project.ftb_teams_version
		}
	}

	createMavenPublishingBlock(project)
}

idea {
	module {
		downloadSources = true
		downloadJavadoc = true
	}
}

publishMods {
	dryRun = providers.environmentVariable("CURSEFORGE_KEY").getOrNull() == null || providers.environmentVariable("SKIP_CURSEFORGE").getOrNull() != null
	changelog = createChangelog(project)
	version = project.version
	type = createReleaseType(project)

	def createOptions = (String projectName) -> {
		publishOptions {
			file = project.provider { project(":$projectName").tasks.jar }.flatMap { it.archiveFile }
			displayName = "${readable_name} ${projectName.capitalize()} ${project.version}"
			modLoaders.add(projectName.toLowerCase())
		}
	}

	def fabricOptions = createOptions("fabric")
	def neoForgeOptions = createOptions("neoforge")

	def curseForgeOptions = curseforgeOptions {
		accessToken = providers.environmentVariable("CURSEFORGE_KEY")
		supported_minecraft_versions.split(",").each {
			minecraftVersions.add(it.trim())
		}
		javaVersions.add(JavaVersion.VERSION_25)
	}

	curseforge("curseforgeFabric") {
		from(curseForgeOptions, fabricOptions)
		projectId = curseforge_id_fabric
		requires('fabric-api')
		requires('ftb-library-fabric')
		requires('ftb-teams-fabric')
		optional('ftb-ranks-fabric')
	}

	curseforge("curseforgeNeoForge") {
		from(curseForgeOptions, neoForgeOptions)
		projectId = curseforge_id_forge
		requires('ftb-library-forge')
		requires('ftb-teams-forge')
		optional('ftb-ranks-forge')
	}
}
